[project]
name = "comfyui_tj_normallighting"
description = "Custom Node for comfyUI for virtual lighting based on normal map.\nYou can use normal maps to add virtual lighting effects to your images."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/TJ16th/comfyUI_TJ_NormalLighting"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyUI_TJ_NormalLighting"
Icon = ""
